NOCC 1.0    ?? ??, 2005

    * Use PNG image files instead of GIF (Arnaud Boudou).
    * Add possibility to go back to previous page in case of unrecoverable 
      error (Arnaud Boudou).
    * NOCC is now XTHML 1.1 Strict compliant (Arnaud Boudou).
    * Improved CSS customization (Arnaud Boudou).
    * Sent Folder can now be setup by user and is no more a global option
      (Arnaud Boudou).
    * Enforce $conf->crlf option in order to avoid mixed "\r\n" and "\n" line
      break (Arnaud Boudou, bug #1228430).
    * Added option to select the character to use for login<char>domain login
      style (Arnaud Boudou).
    * Fix french translation (Arnaud Boudou).
    * Fix issue with use of user's reply leading (Arnaud Boudou).
    * Fix issue where allow_reply_leading configuration property was not taken
      in account if set to false, and a reply leading was previously set in
      users preferences (Arnaud Boudou).
    * Add possibility for the user to override incoming mail charset. Iconv is
      now mandatory (Arnaud Boudou, RFE #408167).
    * Add new configuration option in order to use a default encoding charset
      (default to UTF-8) in case no one is provided by the displayed mail
      (Arnaud Boudou).
    * Replace all "<?" tags by "<?php" tags. (Arnaud Boudou, bug #1230999).
    * Convert Nocc to UTF-8 support (Arnaud Boudou).
    * Replying to HTML mails now convert HTML special chars to standard chars
      (Arnaud Boudou).

NOCC 0.9.7    July 01, 2005

    * Add quotas limits display. (Arnaud Boudou)
    * Add mailbox RSS streams. (Arnaud Boudou)
    * Fix issue where text and image attachments where not rendered at the end
      of the mail (Arnaud Boudou)
    * Add an option to remember login settings, using a cookie (Arnaud Boudou)
    * Fix issue with deleted messages when user open message in a new window
      (Arnaud Boudou, bug #1163679)
    * Add email sent confirmation within Inbox menu. (Arnaud Boudou, RFE
      489151)